Bug 161426 - Clicking on cell content of column 2 selected the cropped image in a different cell
Summary: Clicking on cell content of column 2 selected the cropped image in a differen...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords:
Depends on:
Blocks: Writer-Tables Cell-Management Authors
  Show dependency treegraph
 
Reported: 2024-06-05 12:26 UTC by László Németh
Modified: 2024-10-11 14:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
unit test document (18.23 KB, application/vnd.oasis.opendocument.text-flat-xml)
2024-06-05 13:33 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-06-05 12:26:23 UTC
Description:
Fixes for Bug 160842 and Bug 161332 didn't handle multicolumn tables.

Steps to Reproduce:
1. Open the test document of Bug 160842 (https://bugs.documentfoundation.org/attachment.cgi?id=194549).
2. Click on the right border of the floating table.

Actual Results:
It selects the image (which is bigger, than the table).

Expected Results:
It selects the floating table.


Reproducible: Always


User Profile Reset: No

Additional Info:
Also it's not possible to select the B1 and B2 cells.
Comment 1 László Németh 2024-06-05 13:33:42 UTC
Created attachment 194551 [details]
unit test document
Comment 2 Commit Notification 2024-06-05 20:22:45 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/886cbcd7627985692d4d2ad3197b1af08378d430

tdf#161426 sw: fix selection in multicolumn floating table

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-06 08:46:31 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/e15a11679a3e0b4e67a0a27cd42f7fc5567e725f

tdf#161426 sw: fix selection in multicolumn floating table

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.