tdf#161426 sw: fix selection in multicolumn floating table

It was not possible to select text content of a cell, if
one of the previous cells in the same row contains a cropped
image hovering this cell, too.

Follow-up to commit f3b899655018397e71300dbb32cdf4f82940a68b
"tdf#160842 sw: select cell content instead of cropped part of image".

Also clean-up to commit 2f7bb481c57458a38769ebd961f07cc45767f1f7
"tdf#161332 sw: fix missing selection of floating table".

Change-Id: Ib033f7238d9513c8ed18c472ce4afbd4d6ad1172
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168475
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins